--- a/HappyDays/HappyDays/Base.lproj/Main.storyboard
+++ b/HappyDays/HappyDays/Base.lproj/Main.storyboard
@@ -85,18 +85,28 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
-                        <imageView key="backgroundView" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="h7h-iI-TPF">
-                            <rect key="frame" x="0.0" y="-172" width="393" height="852"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Memory" id="Vja-nU-Ylk" customClass="MemorieCellCollectionViewCell" customModule="HappyDays" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bd5-We-3F2" customClass="MemoryCell" customModule="HappyDays" customModuleProvider="target">
                                 <rect key="frame" x="96.666666666666671" y="50" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="s1M-J7-HAA">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="clm-Hg-0Qp">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ky7-7l-VOZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ky7-7l-VOZ" firstAttribute="leading" secondItem="clm-Hg-0Qp" secondAttribute="leading" id="7DO-ie-36X"/>
+                                        <constraint firstItem="ky7-7l-VOZ" firstAttribute="centerY" secondItem="clm-Hg-0Qp" secondAttribute="centerY" id="Pdp-6T-cde"/>
+                                        <constraint firstItem="ky7-7l-VOZ" firstAttribute="centerX" secondItem="clm-Hg-0Qp" secondAttribute="centerX" id="kN8-aG-nA5"/>
+                                        <constraint firstItem="ky7-7l-VOZ" firstAttribute="top" secondItem="clm-Hg-0Qp" secondAttribute="top" id="sPY-XP-5JJ"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="imageView" destination="ky7-7l-VOZ" id="M2v-Ob-vZo"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Header" id="myT-KA-uFX">
@@ -125,9 +135,6 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="wDi-MW-SGI"/>
-                    <connections>
-                        <outlet property="imageView" destination="h7h-iI-TPF" id="2fF-7P-drK"/>
-                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AdN-9F-MKa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
